--- a/exercises/04-create-embeddings.ipynb
+++ b/exercises/04-create-embeddings.ipynb
@@ -23,7 +23,9 @@
     "from gen_ai_hub.proxy.native.openai import embeddings\n",
     "\n",
     "# TODO assign the model name of the embedding model here, e.g. \"text-embedding-3-small\"\n",
-    "EMBEDDING_MODEL_NAME = \"\""
+    "EMBEDDING_MODEL_NAME = \"\"\n",
+    "\n",
+    "assert EMBEDDING_MODEL_NAME!='', \"\"\"You should change the variable `EMBEDDING_MODEL_NAME` with the name of your deployed model (like 'text-embedding-3-small') first!\"\"\""
    ]
   },
   {
